fixed padding on smaller screens

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -30,6 +30,13 @@
     border-top: solid #ffffff 1px;
 }
 
+@media (max-width: 960px) { 
+    .about-section{
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+ }
+
 .sub-desc-titles{
     color: white;
 }
