--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -146,15 +146,6 @@ header{
   color: white;
 }
 
-.gif{
-  width:100%;
-  height: 50%;
-  padding-bottom:50%;
-  position:relative;
-  /* text-align: center;
-  justify-content: center; */
-}
-
 .gif2{
   width:100%;
   height: 50%;
@@ -185,4 +176,17 @@ header{
     padding: 0;
     letter-spacing: 2px;
     text-transform: uppercase;
+}
+
+@media (max-width: 767px) { 
+  .gif2{
+      margin-top: 50px;
+  }
+  
+  .footer-title{
+    text-align: center;
+  }
+  .contactMenu{
+    justify-content: center;
+  }
 }
