--- a/src/app/blog-post/blog-post.component.css
+++ b/src/app/blog-post/blog-post.component.css
@@ -10,14 +10,6 @@
     margin-right: 20%;
 }
 
-@media (max-width: 960px) { 
-    .post-container{
-        margin-left: 15px;
-        margin-right: 15px;
-    }
- }
-
-
 .post-img{
     margin-bottom: 8rem;
     margin-top: 8rem;
@@ -29,4 +21,15 @@
     color: white;
     margin-bottom: 2rem;
 }
+
+@media (max-width: 960px) { 
+    .post-container{
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+    .post-img{
+        margin-bottom: 4rem;
+    }
+ }
 
