--- a/src/app/doodles/doodles.component.css
+++ b/src/app/doodles/doodles.component.css
@@ -20,7 +20,7 @@
 .disclaimer {
     padding-top: 4rem;
     border-top: solid #ffffff 1px;
-    font-style: italic;
+    /* font-style: italic; */
     /* text-align: center; */
 }
 
